--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "travelbit.ai",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "A travel itinerary planner using xAI API",
+  "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "engines": {
+    "node": "20.x"
+  },
   "dependencies": {
-    "axios": "^1.8.4",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0"
-  }
+    "express": "^4.18.2",
+    "axios": "^1.6.0",
+    "dotenv": "^16.3.1"
+  },
+  "author": "Vethrin",
+  "license": "ISC"
 }
