--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "travelbit.ai",
+  "name": "travel-itinerary-planner",
   "version": "1.0.0",
   "description": "A travel itinerary planner using xAI API",
   "main": "src/server.js",
@@ -12,7 +12,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "axios": "^1.6.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "cors": "^2.8.5" 
   },
   "author": "Vethrin",
   "license": "ISC"
